--- a/css/styles.css
+++ b/css/styles.css
@@ -59,30 +59,65 @@ p {
 }
 
 /* Links */
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
 
-.link-arrow{
-    color: var(--color-accent);
-    text-transform: uppercase;
-    font-size: 2rem;
-    font-weight: bold;
-} 
+.link-arrow {
+  color: var(--color-accent);
+  text-transform: uppercase;
+  font-size: 2rem;
+  font-weight: bold;
+}
 
-.link-arrow::after{
-    content: "-->";
-    margin-left: 5px;
-    transition: margin .5s;
-} 
+.link-arrow::after {
+  content: "-->";
+  margin-left: 5px;
+  transition: margin 0.5s;
+}
 
-.link-arrow:hover::after{ 
-    margin-left: 10px;
-} 
+.link-arrow:hover::after {
+  margin-left: 10px;
+}
 
 @media screen and (min-width: 1024px) {
-    .link-arrow{
-        font-size: 1.5rem; 
-    }
-    
+  .link-arrow {
+    font-size: 1.5rem;
+  }
 }
+
+/* Badges */
+
+.badge {
+  border-radius: 20px;
+  font-size: 2rem;
+  font-style: bold;
+  padding: 1rem 2rem;
+  white-space: nowrap;
+}
+
+.badge--primary {
+  background-color: var(--color-primary);
+  color: white;
+}
+
+.badge--secondary {
+  background-color: var(--color-secondary);
+  color: white;
+}
+
+.badge--small {
+  font-size: 1.6rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .badge {
+    font-size: 1.5rem;
+    padding: 0.8rem 1.5rem;
+  }
+
+  .badge--small {
+    font-size: 1.2rem;
+  }
+}
+ 
