--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,8 @@
   --color-accent: #ff3400;
   --color-headings: #1b0760;
   --color-body: #918ca4;
+  --color-border: #ccc;
+  --border-radius: 3.7rem;
 }
 *,
 *::after,
@@ -229,7 +231,7 @@ a {
 }
 
 .btn--accent:hover {
-  background-color: #a7381c; 
+  background-color: #a7381c;
   /* border: 2px solid #a7381c; */
 }
 
@@ -240,4 +242,41 @@ a {
   }
 }
 
+/* Inputs */
 
+.input {
+  border-radius: var(--border-radius);
+  border: 1px solid var(--color-border);
+  color: var(--color-headings);
+  font-size: 2rem;
+  font-weight: 300;
+  outline: 0;
+  padding: 1.5rem 3.5rem;
+  /* width: 100%; */
+}
+
+::placeholder {
+  color: #cdcbd7;
+}
+
+.input-group {
+  border: 1px solid var(--color-border);
+  border-radius: var(--border-radius);
+  display: flex;
+}
+
+.input-group .input {
+  flex-grow: 1 ;
+  border: 0;
+  padding: 1.5rem 1rem;
+}
+
+.input-group button {
+  margin: 4px;
+}
+
+@media screen and (min-width: 1024px) {
+  .input {
+    font-size: 1.5rem;
+  }
+}
