--- a/css/styles.css
+++ b/css/styles.css
@@ -266,7 +266,7 @@ a {
 }
 
 .input-group .input {
-  flex-grow: 1 ;
+  flex-grow: 1;
   border: 0;
   padding: 1.5rem 1rem;
 }
@@ -279,4 +279,31 @@ a {
   .input {
     font-size: 1.5rem;
   }
+}
+
+/* Card */
+
+.card {
+  /* box-shadow: 0 0 0 0 #000000; */
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* margin: 6rem;  */
+  /* max-width: 488px; */
+  border-radius: 8px;
+  box-shadow: 0 0 20px 10px #f3f3f3;
+  overflow: hidden;
+}
+
+.card__header,
+.card__body {
+  padding: 2rem 3rem;
+}
+
+.card--primary .card__header {
+  background-color: var(--color-primary);
+  color: white;
+}
+.card--secondary .card__header {
+  background-color: var(--color-secondary);
+  color: white;
 }
