--- a/css/styles.css
+++ b/css/styles.css
@@ -307,3 +307,72 @@ a {
   background-color: var(--color-secondary);
   color: white;
 }
+
+.card--secondary .badge--secondary {
+  background: #02cdf1;
+}
+
+.card--primary .badge--primary {
+  background-color: #126de4;
+}
+
+/* Plans */
+
+.plan__name {
+  color: white;
+  font-weight: 700;
+  margin: 0;
+}
+
+.plan__price {
+  font-size: 6rem;
+  font-weight: 400;
+}
+
+.plan__billing-cycle {
+  font-size: 2.4rem;
+  color: #ffffff;
+  opacity: 0.8;
+}
+.plan__description {
+  font-size: 2rem;
+  color: #ffffff;
+  display: block;
+  letter-spacing: 1px;
+  font-weight: 400;
+}
+
+.plan .list__item {
+  margin-bottom: 2rem;
+}
+
+.plan--popular .card__header {
+  position: relative;
+}
+
+.plan--popular .card__header::before {
+  content: url(../images/popular.svg);
+  width: 40px;
+  display: inline-block;
+  position: absolute;
+  top: -2%;
+  right: 5%;
+}
+
+@media screen and (min-width: 1024px) {
+  .plan__name {
+    font-size: 1.4rem;
+  }
+
+  .plan__price {
+    font-size: 5rem;
+  }
+
+  .plan__billing-cycle {
+    font-size: 1.6rem;
+  }
+
+  .plan__description {
+    font-size: 1.7rem;
+  }
+}
