--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
   --color-accent: #ff3400;
   --color-headings: #1b0760;
   --color-body: #918ca4;
+  --color-body-darker: #5c5577;
   --color-border: #ccc;
   --border-radius: 3.7rem;
 }
@@ -403,5 +404,56 @@ a {
   font-weight: 400;
 }
 
+/* Quotes */
 
-/*  */
+.quote {
+  padding: 3rem;
+  font-style: italic;
+  color: var(--color-body-darker);
+  line-height: 1.3;
+}
+
+.quote_content::before {
+  content: open-quote;
+}
+
+.quote_content::after {
+  content: close-quote;
+}
+
+.quote__author {
+  font-family: Montserrat;
+  color: var(--color-headings);
+  font-weight: 600;
+  font-style: normal;
+}
+
+.quote__company {
+  color: var(--color-headings);
+  display: block;
+  opacity: 0.4;
+  font-size: 2rem;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.quote .media__icon {
+  align-self: flex-start;
+  padding: 0 1rem;
+}
+
+.quote .media__body {
+  margin-top: 0.5rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .quote {
+    font-size: 2rem;
+  }
+  .quote__author {
+    font-size: 2.4rem;
+  }
+  .quote__company {
+    font-size: 1.6rem;
+  }
+}
