--- a/css/styles.css
+++ b/css/styles.css
@@ -165,8 +165,17 @@ a {
   height: 40px;
 }
 
+.icon--small {
+  width: 25px;
+  height: 25px;
+}
+
 .icon--praimary {
   fill: var(--color-primary);
+}
+
+.icon--white {
+  fill: white;
 }
 
 .icon-container {
@@ -178,6 +187,10 @@ a {
   height: 64px;
   justify-content: center;
   width: 64px;
+}
+
+.icon-container--accent {
+  background-color: var(--color-accent);
 }
 
 /* Buttons */
@@ -474,5 +487,63 @@ a {
 @media screen and (min-width: 1024px) {
   .grid--1x3 {
     grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+/* Testimonials */
+
+.testimonial {
+  padding: 3rem;
+}
+
+.testimonial__image {
+  position: relative;
+}
+
+.testimonial__image > img {
+  width: 100%;
+}
+
+.testimonial .icon-container {
+  height: 54px;
+  width: 54px;
+  position: absolute;
+  right: -27px;
+  top: 20px;
+}
+
+.testimonial .quote {
+  padding: 1rem;
+  /* margin: 0; */
+}
+
+/* @media screen and (min-width: 1024px) {
+  .testimonial .quote {
+    padding: 0;
+    margin: 0;
+  }
+} */
+
+@media screen and (min-width: 768px) {
+  .testimonial .quote,
+  .testimonial .quote__author,
+  .testimonial .quote__company {
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .testimonial .quote,
+  .testimonial .quote__author,
+  .testimonial .quote__company {
+    font-size: 2.2rem;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .testimonial .quote,
+  .testimonial .quote__author,
+  .testimonial .quote__company {
+    font-size: 3.2rem;
   }
 }
