--- a/css/styles.css
+++ b/css/styles.css
@@ -591,7 +591,7 @@ a {
     font-weight: 300;
   }
 
-  .callout .grid--1x2{
+  .callout .grid--1x2 {
     grid-template-columns: 1fr auto;
   }
 }
@@ -607,3 +607,40 @@ a {
     font-size: 1.5rem;
   }
 } */
+
+/* Collapsibles */
+
+.collapsible__header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.collapsible__heading {
+  margin-top: 0;
+  font-size: 3rem;
+}
+
+.collapsible__chevron {
+  transform: rotate(-90deg);
+  transition: transform 0.3s;
+}
+
+.collapsible__content {
+  /* display: none; */
+  max-height: 0;
+  overflow: hidden;
+  opacity: 0;
+  transition: max-height 0.3s, opacity 0.3s;
+}
+
+.collapsible--expanded .collapsible__chevron {
+  transform: rotate(0);
+}
+
+.collapsible--expanded .collapsible__content {
+  /* display: block; */
+  transition: all 0.3s;
+  max-height: 100vh;
+  opacity: 1;
+  overflow: visible;
+}
