--- a/components/hero.html
+++ b/components/hero.html
@@ -1,4 +1,4 @@
-<section class="block block--dark block--skewed-left hero">
+<!-- <section class="block block--dark block--skewed-left hero">
     <div class="container grid grid--1x2">
         <header class="block__header hero__content">
             <h1 class="block__heading">Cloud Hosting
@@ -11,5 +11,26 @@
         </header>
 
         <img class="hero__image" src="/images/banner.png" alt="">
+    </div>
+</section> -->
+
+
+<section class="block block--dark block--skewed-left hero">
+    <div class="container grid grid--1x2">
+        <header class="block__header hero__content">
+            <h1 class="block__heading">Cloud Hosting
+                for Pros</h1>
+            <p class="hero__tagline">
+                Deploy your website in less than 60 seconds.
+            </p>
+            <a class="btn btn--accent"> Get Started </a>
+
+        </header>
+
+        <picture>
+            <source type="image/webp" srcset="images/banner@1x.webp 1x, images/banner@2x.webp 2x ">
+            <source type="image/png" srcset="images/banner@1x.png 1x, images/banner@2x.png 2x ">
+            <img class="hero__image" src="/images/banner@1x.png" alt="">
+        </picture>
     </div>
 </section>
