--- a/css/styles.css
+++ b/css/styles.css
@@ -202,6 +202,7 @@ a {
   border: 0;
   cursor: pointer;
   font-weight: 600;
+  outline: 0;
   padding: 2rem;
   text-transform: uppercase;
   white-space: nowrap;
@@ -212,6 +213,19 @@ a {
 .btn--block {
   display: inline-block;
   width: 100%;
+}
+
+.btn--accent.btn--small {
+  /* font-weight: 400; */
+  font-size: 1.5rem;
+  padding: 1rem 1.5rem;
+}
+
+.btn .icon {
+  width: 2rem;
+  height: 2rem;
+  margin-right: 0.5rem;
+  vertical-align: middle;
 }
 
 .btn--primary {
@@ -283,7 +297,8 @@ a {
 .input-group .input {
   flex-grow: 1;
   border: 0;
-  padding: 1.5rem 1rem;
+  padding: 1.5rem 2rem;
+  font-size: 1.5rem;
 }
 
 .input-group button {
@@ -784,3 +799,41 @@ a {
     align-self: center;
   }
 }
+
+/* Domain block */
+
+.block__domain .input-group {
+  margin: 4rem auto;
+  box-shadow: 0 0 30px 20px #e6ebee;
+  border: 0;
+  max-width: 650px;
+}
+
+.block__domain-prices {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 6rem);
+  font-size: 1.5rem;
+  font-weight: 700;
+  justify-items: center;
+  align-items: center;
+  max-width: 700px;
+  margin: 0 auto;
+}
+.list__more {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .block__domain-prices {
+    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    grid-template-rows: repeat(1, 6rem);
+    max-width: 800px;
+  }
+  .list__more {
+    display: inline;
+  }
+}
+
+
+/* Plans  */
