--- a/css/styles.css
+++ b/css/styles.css
@@ -348,6 +348,9 @@ a {
 
 /* Plans */
 
+.plan{
+  transition: transform .2s ease-out;
+}
 .plan__name {
   color: white;
   font-weight: 700;
@@ -376,6 +379,10 @@ a {
   margin-bottom: 2rem;
 }
 
+.plan--popular {
+  transform: scale(1.1);
+}
+
 .plan--popular .card__header {
   position: relative;
 }
@@ -387,6 +394,14 @@ a {
   position: absolute;
   top: -2%;
   right: 5%;
+}
+
+.plan:hover {
+  transform: scale(1.05);
+}
+
+.plan--popular:hover {
+  transform: scale(1.15);
 }
 
 @media screen and (min-width: 1024px) {
@@ -835,5 +850,13 @@ a {
   }
 }
 
+/* Plans block */
 
-/* Plans  */
+.block-plans .grid {
+  gap: 8rem 4rem;
+}
+
+.block-plans .card {
+  max-width: 500px;
+  margin: 0 auto;
+}
