--- a/css/styles.css
+++ b/css/styles.css
@@ -864,9 +864,6 @@ a {
 
 /* Features */
 
-/* .features__block{
-} */
-
 .feature {
   gap: 4rem;
   margin: 12rem;
@@ -894,7 +891,7 @@ a {
     grid-template-areas: "content image";
   }
 
-  .feature:first-of-type{
+  .feature:first-of-type {
     margin-top: 6rem;
   }
 
@@ -910,4 +907,50 @@ a {
   .feature:nth-child(even) .feature__inage {
     grid-area: content;
   }
+}
+
+/* Showcase block */
+
+.showcase_heading {
+  color: white;
+}
+.showcase__block.block--skewed-right {
+  padding-bottom: calc(var(--padding-vertical) + 4rem);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
+}
+
+.showcase__content .media:last-of-type {
+  padding-bottom: 8rem;
+}
+
+.showcase__image {
+  width: 100%;
+}
+
+.showcase__block .media__title {
+  color: white;
+}
+
+@media screen and (min-width: 1024px) {
+  .showcase_heading {
+    margin-bottom: 5rem;
+    margin-top: 0;
+  }
+  .showcase__content .media:last-of-type {
+    padding-bottom: 4rem;
+  }
+
+  .showcase__block {
+    padding: 10rem;
+  }
+
+  .showcase__block .media {
+    margin-bottom: 0;
+  }
+
+  .showcase__block .media__content,
+  .showcase__block .media__title {
+    font-size: 1.5rem;
+  }
+
 }
