--- a/components/features.html
+++ b/components/features.html
@@ -20,7 +20,7 @@
     <picture>
         <source type="image/webp" srcset="/images/easy.webp 1x, /images/easy@2x.webp 2x">
         <source type="image/jpg" srcset="/images/easy.jpg 1x, /images/easy@2x.jpg 2x">
-        <img class="feature__inage" src="/images/easy@2x.jpg" alt="">
+        <img class="feature__image" src="/images/easy@2x.jpg" alt="">
     </picture>
 </article>
 
@@ -48,7 +48,7 @@
     <picture>
         <source type="image/webp" srcset="/images/fast.webp 1x, /images/fast@2x.webp 2x">
         <source type="image/jpg" srcset="/images/fast.jpg 1x, /images/fast@2x.jpg 2x">
-        <img class="feature__inage" src="/images/fast@2x.jpg" alt="">
+        <img class="feature__image" src="/images/fast@2x.jpg" alt="">
     </picture>
 
 
@@ -76,7 +76,7 @@
     <picture>
         <source type="image/webp" srcset="/images/wordpress.webp 1x, /images/wordpress@2x.webp 2x">
         <source type="image/jpg" srcset="/images/wordpress.jpg 1x, /images/wordpress@2x.jpg 2x">
-        <img class="feature__inage" src="/images/wordpress@2x.jpg" alt="">
+        <img class="feature__image" src="/images/wordpress@2x.jpg" alt="">
     </picture>
 
 </article>
@@ -105,7 +105,7 @@
     <picture>
         <source type="image/webp" srcset="/images/support.webp 1x, /images/support@2x.webp 2x">
         <source type="image/jpg" srcset="/images/support.jpg 1x, /images/support@2x.jpg 2x">
-        <img class="feature__inage" src="/images/support@2x.jpg" alt="">
+        <img class="feature__image" src="/images/support@2x.jpg" alt="">
     </picture>
 
 </article>
