--- a/css/styles.css
+++ b/css/styles.css
@@ -477,6 +477,7 @@ a {
   font-style: italic;
   color: var(--color-body-darker);
   line-height: 1.3;
+  margin: 2.4rem 0;
 }
 
 .quote_content::before {
@@ -494,11 +495,15 @@ a {
   font-style: normal;
 }
 
+.quote_content,
+.quote__author {
+  font-size: 1.8rem;
+}
 .quote__company {
   color: var(--color-headings);
   display: block;
   opacity: 0.4;
-  font-size: 2rem;
+  font-size: 1.2rem;
   font-weight: 400;
   font-style: normal;
 }
@@ -512,9 +517,15 @@ a {
   margin-top: 0.5rem;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 768px) {
   .quote {
-    font-size: 2rem;
+    margin: 0 4rem;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .quote_content {
+    font-size: 2.2rem;
+    margin: 1rem 1rem 1rem 3rem;
   }
   .quote__author {
     font-size: 2.4rem;
@@ -937,7 +948,7 @@ a {
 
 .feature {
   gap: 4rem;
-  margin: 12rem;
+  margin: 2rem;
 }
 
 .feature__heading {
@@ -956,6 +967,7 @@ a {
 @media screen and (min-width: 1024px) {
   .feature {
     gap: 2rem;
+    margin: 12rem;
   }
 
   .feature.grid {
@@ -1151,7 +1163,7 @@ a {
 /* Features Block */
 
 .features__block {
-  margin-top: 10rem;
+  margin-top: 4rem;
 }
 
 /* Callout block */
@@ -1168,6 +1180,9 @@ a {
 }
 
 @media screen and (min-width: 1024px) {
+  .features__block {
+    margin-top: 10rem;
+  }
   .callout_block {
     top: -8rem;
     padding: 0 20rem;
